examples/many/before/deployment.flux-engine-steam.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flux-engine-steam
  namespace: classification
  labels:
    helm.sh/chart: some-chart
    app.kubernetes.io/name: flux-engine-steam
    app: flux-engine-steam
    app.kubernetes.io/version: 0.0.27-pre1
    app.kubernetes.io/managed-by: releaser
  annotations:
    github.com/repository_url: git@github.com:flux-engine-steam
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: flux-engine-steam
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: app
        github.com/repository_url: git@github.com:flux-engine-steam
      labels:
        helm.sh/chart: flux-engine-steam-2.28.12
        app.kubernetes.io/name: flux-engine-steam
        app: flux-engine-steam
        app.kubernetes.io/version: 0.0.27-pre1
        app.kubernetes.io/managed-by: releaser
    spec:
      imagePullSecrets:
        - name: aws-registry
        - name: docker-registry
      serviceAccountName: default
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: flux-engine-steam
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: flux-engine-steam
      terminationGracePeriodSeconds: 30
      containers:
        - name: app
          image: flux-engine-steam:v0.0.27-pre1
          ports:
            - name: https
              containerPort: 8501
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8501
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8501
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 10
          resources:
            limits:
              cpu: '1'
              ephemeral-storage: 2Gi
              memory: 1Gi
            requests:
              cpu: '0.2'
              ephemeral-storage: 1.2Gi
              memory: 100Mi
      dnsConfig:
        options:
          - name: ndots
            value: '2'
          - name: single-request-reopen
